// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAlignedDiffs lines change preceding and following common 1`] = `
"<green>- <inverse>delete</></>
<red>+ <inverse>insert</></>
<dim>  common between changes</>
<green>- <inverse>prev</></>
<red>+ <inverse>next</></>"
`;

exports[`getAlignedDiffs lines common at end when both current change lines are empty 1`] = `
"<green>- <inverse>delete</></>
<dim>  common at end</>"
`;

exports[`getAlignedDiffs lines common between delete and insert 1`] = `
"<green>- <inverse>delete</></>
<dim>  common between changes</>
<red>+ <inverse>insert</></>"
`;

exports[`getAlignedDiffs lines common between insert and delete 1`] = `
"<red>+ <inverse>insert</></>
<dim>  common between changes</>
<green>- <inverse>delete</></>"
`;

exports[`getAlignedDiffs lines common preceding and following change 1`] = `
"<dim>  common preceding</>
<green>- <inverse>delete</></>
<red>+ <inverse>insert</></>
<dim>  common following</>"
`;

exports[`getAlignedDiffs newline change from space 1`] = `
"<green>- preceding<inverse> </>following</>
<red>+ preceding</>
<red>+ following</>"
`;

exports[`getAlignedDiffs newline change to space 1`] = `
"<green>- preceding</>
<green>- following</>
<red>+ preceding<inverse> </>following</>"
`;

exports[`getAlignedDiffs newline delete only 1`] = `
"<green>- preceding</>
<green>- following</>
<red>+ precedingfollowing</>"
`;

exports[`getAlignedDiffs newline delete with adjacent change 1`] = `
"<green>- preced<inverse>ing</></>
<green>- following</>
<red>+ preced<inverse>ed</>following</>"
`;

exports[`getAlignedDiffs newline insert only 1`] = `
"<green>- precedingfollowing</>
<red>+ preceding</>
<red>+ following</>"
`;

exports[`getAlignedDiffs newline insert with adjacent changes 1`] = `
"<green>- preced<inverse>edf</>ollowing</>
<red>+ preced<inverse>ing</></>
<red>+ <inverse>F</>ollowing</>"
`;

exports[`getAlignedDiffs strings change at start and delete or insert at end 1`] = `
"<green>- <inverse>prev</> change common<inverse> delete</></>
<red>+ <inverse>next</> change common</>
<dim>  unchanged</>
<green>- <inverse>expect</>ed change common</>
<red>+ <inverse>receiv</>ed change common<inverse> insert</></>"
`;

exports[`getAlignedDiffs strings delete or insert at start and change at end 1`] = `
"<green>- common change <inverse>prev</></>
<red>+ <inverse>insert </>common change <inverse>next</></>
<dim>  unchanged</>
<green>- <inverse>delete </>common change th<inverse>is</></>
<red>+ common change th<inverse>at</></>"
`;

exports[`getAlignedDiffs substrings first common when both current change lines are empty 1`] = `
"<red>+ <inverse>insert</></>
<dim>  first</>
<dim>  middle</>
<green>- last <inverse>prev</></>
<red>+ last <inverse>next</></>"
`;

exports[`getAlignedDiffs substrings first common when either current change line is non-empty 1`] = `
"<green>- <inverse>expected </>first</>
<red>+ first</>

<dim>  last</>"
`;

exports[`getAlignedDiffs substrings first delete completes the current line 1`] = `
"<green>- common preceding <inverse>first</></>
<green>- <inverse>middle</></>
<green>- <inverse>last </>and following</>
<red>+ common preceding and following</>"
`;

exports[`getAlignedDiffs substrings first insert completes the current line 1`] = `
"<green>- common preceding</>
<red>+ common preceding<inverse> first</></>
<red>+ <inverse>middle</></>
<red>+</>"
`;

exports[`getAlignedDiffs substrings last is empty in delete at end 1`] = `
"<green>- common string preceding <inverse>prev</></>
<green>-</>
<red>+ common string preceding <inverse>next</></>"
`;

exports[`getAlignedDiffs substrings last is empty in insert at end 1`] = `
"<green>- common string preceding <inverse>prev</></>
<red>+ common string preceding <inverse>next</></>
<red>+</>"
`;

exports[`getAlignedDiffs substrings last is non-empty in common not at end 1`] = `
"<dim>  common first</>
<green>- last <inverse>expect</>ed</>
<red>+ last <inverse>receiv</>ed</>"
`;

exports[`getAlignedDiffs substrings middle is empty in delete between common 1`] = `
"<green>- common at start precedes <inverse>delete</></>
<green>-</>
<green>- <inverse>expect</>ed common at end</>
<red>+ common at start precedes <inverse>receiv</>ed common at end</>"
`;

exports[`getAlignedDiffs substrings middle is empty in insert at start 1`] = `
"<green>- <inverse>expect</>ed common at end</>
<red>+ <inverse>insert line</></>
<red>+</>
<red>+ <inverse>receiv</>ed common at end</>"
`;

exports[`getAlignedDiffs substrings middle is non-empty in delete at end 1`] = `
"<green>- common at start precedes <inverse>delete</></>
<green>- <inverse>non-empty line</></>
<green>- <inverse>next</></>
<red>+ common at start precedes <inverse>prev</></>"
`;

exports[`getAlignedDiffs substrings middle is non-empty in insert between common 1`] = `
"<green>- common at start precedes <inverse>delete expect</>ed</>
<red>+ common at start precedes <inverse>insert</></>
<red>+ <inverse>non-empty</></>
<red>+ <inverse>receiv</>ed</>"
`;
